[package]
name = "blocking-delay-queue"
version = "0.1.0"
authors = ["dejankos <kosdejan@yahoo.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["delay-queue"]
description = "A thread safe blocking delay queue in which an element can only be taken when its delay has expired."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bdq_benchmark"
harness = false